--- a/notebook/02_prepare_based_model.ipynb
+++ b/notebook/02_prepare_based_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,36 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/pradhyumnyadav/Desktop'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +20,7 @@
        "'/Users/pradhyumnyadav'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,23 +31,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass\n",
-    "from pathlib import Path\n",
-    "import os\n",
-    "import urllib.request as request\n",
-    "from zipfile import ZipFile\n",
-    "import tensorflow as tf\n",
-    "from ct_scan.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH\n",
-    "from ct_scan.utils.common import read_yaml, create_directories\n"
+    "os.chdir(\"../\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from dataclasses import dataclass\n",
+    "# from pathlib import Path\n",
+    "# import os\n",
+    "# import urllib.request as request\n",
+    "# from zipfile import ZipFile\n",
+    "# import tensorflow as tf\n",
+    "# #from ct_scan.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH\n",
+    "# from ct_scan.utils.common import read_yaml, create_directories\n",
+    "\n",
+    "from dataclasses import dataclass\n",
+    "from pathlib import Path\n",
+    "import tensorflow as tf\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,44 +98,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        config_filepath=CONFIG_FILE_PATH,\n",
-    "        params_filepath=PARAMS_FILE_PATH):\n",
-    "        \n",
-    "\n",
-    "        self.config = read_yaml(config_filepath)\n",
-    "        self.params = read_yaml(params_filepath)\n",
-    "\n",
-    "        create_directories([self.config.artifacts_root])\n",
+    "    def __init__(self):\n",
+    "        self.config = {\n",
+    "            \"artifacts_root\": \"artifacts\",\n",
+    "            \"data_ingestion\": {\n",
+    "                \"root_dir\": \"artifacts/data_ingestion\",\n",
+    "                \"source_URL\": \"https://drive.google.com/file/d/1z0mreUtRmR-P-magILsDR3T7M6IkGXtY/view?usp=sharing\",\n",
+    "                \"local_data_file\": \"artifacts/data_ingestion/data.zip\",\n",
+    "                \"unzip_dir\": \"artifacts/data_ingestion\"\n",
+    "            },\n",
+    "            \"prepare_base_model\": {\n",
+    "                \"root_dir\": \"artifacts/prepare_base_model\",\n",
+    "                \"base_model_path\": \"artifacts/prepare_base_model/base_model.h5\",\n",
+    "                \"updated_base_model_path\": \"artifacts/prepare_base_model/base_model_updated.h5\"\n",
+    "            },\n",
+    "            \"training\": {\n",
+    "                \"root_dir\": \"artifacts/training\",\n",
+    "                \"trained_model_path\": \"artifacts/training/model.h5\"\n",
+    "            }\n",
+    "        }\n",
+    "        self.params = {\n",
+    "            \"AUGMENTATION\": True,\n",
+    "            \"IMAGE_SIZE\": [224, 224, 3],\n",
+    "            \"BATCH_SIZE\": 16,\n",
+    "            \"INCLUDE_TOP\": False,\n",
+    "            \"EPOCHS\": 5,\n",
+    "            \"CLASSES\": 2,\n",
+    "            \"WEIGHTS\": \"imagenet\",\n",
+    "            \"LEARNING_RATE\": 0.01\n",
+    "        }\n",
     "\n",
     "    def get_prepare_base_model_config(self) -> PrepareBaseModelConfig:\n",
-    "        config = self.config.prepare_base_model\n",
+    "        config = self.config[\"prepare_base_model\"]\n",
     "        \n",
-    "        create_directories([config.root_dir])\n",
-    "\n",
     "        prepare_base_model_config = PrepareBaseModelConfig(\n",
-    "            root_dir=Path(config.root_dir),\n",
-    "            base_model_path=Path(config.base_model_path),\n",
-    "            updated_base_model_path=Path(config.updated_base_model_path),\n",
-    "            params_image_size=self.params.IMAGE_SIZE,\n",
-    "            params_learning_rate=self.params.LEARNING_RATE,\n",
-    "            params_include_top=self.params.INCLUDE_TOP,\n",
-    "            params_weights=self.params.WEIGHTS,\n",
-    "            params_classes=self.params.CLASSES\n",
+    "            root_dir=config[\"root_dir\"],\n",
+    "            base_model_path=config[\"base_model_path\"],\n",
+    "            updated_base_model_path=config[\"updated_base_model_path\"],\n",
+    "            params_image_size=self.params[\"IMAGE_SIZE\"],\n",
+    "            params_learning_rate=self.params[\"LEARNING_RATE\"],\n",
+    "            params_include_top=self.params[\"INCLUDE_TOP\"],\n",
+    "            params_weights=self.params[\"WEIGHTS\"],\n",
+    "            params_classes=self.params[\"CLASSES\"]\n",
     "        )\n",
     "\n",
-    "        return prepare_base_model_config"
+    "        return prepare_base_model_config\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,14 +237,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred: [Errno 2] No such file or directory: '/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis/src/ct_scan/constants/config/config.yaml'\n"
+      "[2024-02-23 12:44:40,296: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "An error occurred: artifacts; Permission denied\n"
      ]
     }
    ],
