--- a/notebook/01_data_ingestion.ipynb
+++ b/notebook/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,36 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis/notebook'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +20,7 @@
        "'/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +31,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/pradhyumnyadav/Desktop'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +72,12 @@
     "from ct_scan import logger\n",
     "from ct_scan.utils.common import get_size\n",
     "from ct_scan.utils.common import read_yaml, create_directories\n",
-    "from ct_scan.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH\n"
+    "# from ct_scan.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,35 +92,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        config_filepath=CONFIG_FILE_PATH,\n",
-    "        params_filepath=PARAMS_FILE_PATH\n",
-    "    ):\n",
-    "        self.config = read_yaml(config_filepath)\n",
-    "        self.params = read_yaml(params_filepath)\n",
-    "        create_directories([self.config.artifacts_root])\n",
+    "    def __init__(self):\n",
+    "        self.config = {\n",
+    "            \"artifacts_root\": \"artifacts\",\n",
+    "            \"data_ingestion\": {\n",
+    "                \"root_dir\": \"artifacts/data_ingestion\",\n",
+    "                \"source_URL\": \"https://drive.google.com/file/d/1z0mreUtRmR-P-magILsDR3T7M6IkGXtY/view?usp=sharing\",\n",
+    "                \"local_data_file\": \"artifacts/data_ingestion/data.zip\",\n",
+    "                \"unzip_dir\": \"artifacts/data_ingestion\"\n",
+    "            },\n",
+    "            \"prepare_base_model\": {\n",
+    "                \"root_dir\": \"artifacts/prepare_base_model\",\n",
+    "                \"base_model_path\": \"artifacts/prepare_base_model/base_model.h5\",\n",
+    "                \"updated_base_model_path\": \"artifacts/prepare_base_model/base_model_updated.h5\"\n",
+    "            },\n",
+    "            \"training\": {\n",
+    "                \"root_dir\": \"artifacts/training\",\n",
+    "                \"trained_model_path\": \"artifacts/training/model.h5\"\n",
+    "            }\n",
+    "        }\n",
+    "        self.params = {\n",
+    "            \"AUGMENTATION\": True,\n",
+    "            \"IMAGE_SIZE\": [224, 224, 3],\n",
+    "            \"BATCH_SIZE\": 16,\n",
+    "            \"INCLUDE_TOP\": False,\n",
+    "            \"EPOCHS\": 5,\n",
+    "            \"CLASSES\": 2,\n",
+    "            \"WEIGHTS\": \"imagenet\",\n",
+    "            \"LEARNING_RATE\": 0.01\n",
+    "        }\n",
     "\n",
-    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
-    "        config = self.config.data_ingestion\n",
-    "        create_directories([config.root_dir])\n",
-    "        data_ingestion_config = DataIngestionConfig(\n",
-    "            root_dir=config.root_dir,\n",
-    "            source_URL=config.source_URL,\n",
-    "            local_data_file=config.local_data_file,\n",
-    "            unzip_dir=config.unzip_dir\n",
-    "        )\n",
-    "        return data_ingestion_config\n"
+    "   \n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    "        config = self.config.data_ingestion\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_ingestion_config = DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_URL=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir \n",
+    "        )\n",
+    "\n",
+    "        return data_ingestion_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,40 +202,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "try:\n",
-    "    config = ConfigurationManager()\n",
-    "    data_ingestion_config = config.get_data_ingestion_config()\n",
-    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
-    "    data_ingestion.download_file()\n",
-    "    data_ingestion.extract_zip_file()\n",
-    "except FileNotFoundError as e:\n",
-    "    logger.error(f\"FileNotFoundError: {e.filename} not found.\")\n",
-    "except Exception as e:\n",
-    "    logger.error(f\"Error occurred: {str(e)}\")"
-   ]
+   "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
-   "source": [
-    "try:\n",
-    "    config = ConfigurationManager()\n",
-    "    logger.info(\"Configuration loaded successfully.\")\n",
-    "    data_ingestion_config = config.get_data_ingestion_config()\n",
-    "    logger.info(\"Data ingestion configuration loaded successfully.\")\n",
-    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
-    "    data_ingestion.download_file()\n",
-    "    data_ingestion.extract_zip_file()\n",
-    "except FileNotFoundError as e:\n",
-    "    logger.error(f\"FileNotFoundError: {e.filename} not found.\")\n",
-    "except Exception as e:\n",
-    "    logger.error(f\"Error occurred: {str(e)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ConfigurationManager' object has no attribute 'get_data_ingestion_config'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "Cell \u001b[0;32mIn[42], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      2\u001b[0m     config \u001b[38;5;241m=\u001b[39m ConfigurationManager()\n\u001b[0;32m----> 3\u001b[0m     data_ingestion_config \u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_data_ingestion_config\u001b[49m()\n\u001b[1;32m      4\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[1;32m      5\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ConfigurationManager' object has no attribute 'get_data_ingestion_config'"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
@@ -213,8 +234,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
