--- a/notebook/04_model_evaluation_with_mlflow.ipynb
+++ b/notebook/04_model_evaluation_with_mlflow.ipynb
@@ -133,7 +133,7 @@
     "            \"IMAGE_SIZE\": [224, 224, 3],\n",
     "            \"BATCH_SIZE\": 16,\n",
     "            \"INCLUDE_TOP\": False,\n",
-    "            \"EPOCHS\": 5,\n",
+    "            \"EPOCHS\": 10,\n",
     "            \"CLASSES\": 2,\n",
     "            \"WEIGHTS\": \"imagenet\",\n",
     "            \"LEARNING_RATE\": 0.01\n",
@@ -233,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "An error occurred: Evaluation.load_model() missing 1 required positional argument: 'path'\n"
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.\n"
      ]
     }
    ],
@@ -249,7 +249,7 @@
     "    config_manager = ConfigurationManager()\n",
     "    eval_config = config_manager.get_evaluation_config()\n",
     "    evaluation = Evaluation(eval_config)\n",
-    "    evaluation.load_model()\n",
+    "    evaluation.load_model(eval_config.path_of_model)  # Pass the path argument here\n",
     "    # Other evaluation steps here...\n",
     "except FileNotFoundError as e:\n",
     "    print(f\"Error: {e}\")\n",
