--- a/notebook/03_model_trainer.ipynb
+++ b/notebook/03_model_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/pradhyumnyadav'"
+       "'/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,28 +71,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, root_dir):\n",
+    "        self.root_dir = root_dir\n",
     "        self.config = {\n",
-    "            \"artifacts_root\": \"artifacts\",\n",
+    "            \"artifacts_root\": os.path.join(self.root_dir, \"artifacts\"),\n",
     "            \"data_ingestion\": {\n",
-    "                \"root_dir\": \"artifacts/data_ingestion\",\n",
+    "                \"root_dir\": os.path.join(self.root_dir, \"artifacts/data_ingestion\"),\n",
     "                \"source_URL\": \"https://drive.google.com/file/d/1z0mreUtRmR-P-magILsDR3T7M6IkGXtY/view?usp=sharing\",\n",
-    "                \"local_data_file\": \"artifacts/data_ingestion/data.zip\",\n",
-    "                \"unzip_dir\": \"artifacts/data_ingestion\"\n",
+    "                \"local_data_file\": os.path.join(self.root_dir, \"artifacts/data_ingestion/data.zip\"),\n",
+    "                \"unzip_dir\": os.path.join(self.root_dir, \"artifacts/data_ingestion\")\n",
     "            },\n",
     "            \"prepare_base_model\": {\n",
-    "                \"root_dir\": \"artifacts/prepare_base_model\",\n",
-    "                \"base_model_path\": \"artifacts/prepare_base_model/base_model.h5\",\n",
-    "                \"updated_base_model_path\": \"artifacts/prepare_base_model/base_model_updated.h5\"\n",
+    "                \"root_dir\": os.path.join(self.root_dir, \"artifacts/prepare_base_model\"),\n",
+    "                \"base_model_path\": os.path.join(self.root_dir, \"artifacts/prepare_base_model/base_model.h5\"),\n",
+    "                \"updated_base_model_path\": os.path.join(self.root_dir, \"artifacts/prepare_base_model/base_model_updated.h5\")\n",
     "            },\n",
     "            \"training\": {\n",
-    "                \"root_dir\": \"artifacts/training\",\n",
-    "                \"trained_model_path\": \"artifacts/training/model.h5\"\n",
+    "                \"root_dir\": os.path.join(self.root_dir, \"artifacts/training\"),\n",
+    "                \"trained_model_path\": os.path.join(self.root_dir, \"artifacts/training/model.h5\")\n",
     "            }\n",
     "        }\n",
     "        self.params = {\n",
@@ -113,7 +114,6 @@
     "        training_data = os.path.join(self.config[\"data_ingestion\"][\"unzip_dir\"], \"Chest-CT-Scan-data\")\n",
     "        os.makedirs(Path(training[\"root_dir\"]), exist_ok=True)\n",
     "\n",
-    "\n",
     "        training_config = TrainingConfig(\n",
     "            root_dir=Path(training[\"root_dir\"]),\n",
     "            trained_model_path=Path(training[\"trained_model_path\"]),\n",
@@ -130,14 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Training:\n",
     "    def __init__(self, config: TrainingConfig):\n",
     "        self.config = config\n",
-    "\n",
     "    \n",
     "    def get_base_model(self):\n",
     "        self.model = tf.keras.models.load_model(\n",
@@ -145,9 +144,8 @@
     "        )\n",
     "\n",
     "    def train_valid_generator(self):\n",
-    "\n",
     "        datagenerator_kwargs = dict(\n",
-    "            rescale = 1./255,\n",
+    "            rescale=1./255,\n",
     "            validation_split=0.20\n",
     "        )\n",
     "\n",
@@ -188,14 +186,10 @@
     "            **dataflow_kwargs\n",
     "        )\n",
     "\n",
-    "    \n",
     "    @staticmethod\n",
     "    def save_model(path: Path, model: tf.keras.Model):\n",
     "        model.save(path)\n",
     "\n",
-    "\n",
-    "\n",
-    "    \n",
     "    def train(self):\n",
     "        self.steps_per_epoch = self.train_generator.samples // self.train_generator.batch_size\n",
     "        self.validation_steps = self.valid_generator.samples // self.valid_generator.batch_size\n",
@@ -211,31 +205,41 @@
     "        self.save_model(\n",
     "            path=self.config.trained_model_path,\n",
     "            model=self.model\n",
-    "        )"
+    "        )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-02-23 18:11:06,342: WARNING: optimizer: At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.]\n",
+      "[2024-02-24 13:33:33,158: WARNING: optimizer: At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.]\n",
       "Found 68 images belonging to 2 classes.\n",
       "Found 275 images belonging to 2 classes.\n",
-      "Epoch 1/5\n",
-      "17/17 [==============================] - 29s 2s/step - loss: 14.5829 - accuracy: 0.5367 - val_loss: 10.5387 - val_accuracy: 0.6094\n",
-      "Epoch 2/5\n",
-      "17/17 [==============================] - 29s 2s/step - loss: 14.5999 - accuracy: 0.5444 - val_loss: 0.1099 - val_accuracy: 0.9844\n",
-      "Epoch 3/5\n",
-      "17/17 [==============================] - 30s 2s/step - loss: 9.4188 - accuracy: 0.6023 - val_loss: 2.2510 - val_accuracy: 0.8750\n",
-      "Epoch 4/5\n",
-      "17/17 [==============================] - 35s 2s/step - loss: 7.3329 - accuracy: 0.6602 - val_loss: 9.5366 - val_accuracy: 0.3906\n",
-      "Epoch 5/5\n",
-      "17/17 [==============================] - 33s 2s/step - loss: 6.7428 - accuracy: 0.6255 - val_loss: 19.3017 - val_accuracy: 0.3906\n"
+      "Epoch 1/10\n",
+      "17/17 [==============================] - 28s 2s/step - loss: 13.3355 - accuracy: 0.5444 - val_loss: 19.4708 - val_accuracy: 0.6094\n",
+      "Epoch 2/10\n",
+      "17/17 [==============================] - 29s 2s/step - loss: 15.4338 - accuracy: 0.5251 - val_loss: 1.4626 - val_accuracy: 0.8750\n",
+      "Epoch 3/10\n",
+      "17/17 [==============================] - 29s 2s/step - loss: 9.2013 - accuracy: 0.6062 - val_loss: 0.5840 - val_accuracy: 0.7969\n",
+      "Epoch 4/10\n",
+      "17/17 [==============================] - 30s 2s/step - loss: 4.8685 - accuracy: 0.7066 - val_loss: 2.9397 - val_accuracy: 0.8594\n",
+      "Epoch 5/10\n",
+      "17/17 [==============================] - 30s 2s/step - loss: 4.0075 - accuracy: 0.7529 - val_loss: 0.0238 - val_accuracy: 1.0000\n",
+      "Epoch 6/10\n",
+      "17/17 [==============================] - 30s 2s/step - loss: 4.0634 - accuracy: 0.7181 - val_loss: 0.1606 - val_accuracy: 0.8750\n",
+      "Epoch 7/10\n",
+      "17/17 [==============================] - 30s 2s/step - loss: 1.7639 - accuracy: 0.8533 - val_loss: 0.0087 - val_accuracy: 1.0000\n",
+      "Epoch 8/10\n",
+      "17/17 [==============================] - 31s 2s/step - loss: 1.0491 - accuracy: 0.8610 - val_loss: 4.0727 - val_accuracy: 0.7969\n",
+      "Epoch 9/10\n",
+      "17/17 [==============================] - 32s 2s/step - loss: 0.6684 - accuracy: 0.8958 - val_loss: 0.1423 - val_accuracy: 0.8750\n",
+      "Epoch 10/10\n",
+      "17/17 [==============================] - 36s 2s/step - loss: 3.9656 - accuracy: 0.7606 - val_loss: 7.3486 - val_accuracy: 0.4688\n"
      ]
     },
     {
@@ -249,7 +253,8 @@
    ],
    "source": [
     "try:\n",
-    "    config = ConfigurationManager()\n",
+    "    root_dir = '/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis'\n",
+    "    config = ConfigurationManager(root_dir)\n",
     "    training_config = config.get_training_config()\n",
     "    training = Training(config=training_config)\n",
     "    training.get_base_model()\n",
