--- a/notebook/02_prepare_based_model.ipynb
+++ b/notebook/02_prepare_based_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis'"
+       "'/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis/notebook'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/pradhyumnyadav/Desktop'"
+       "'/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,11 +259,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_1\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_2 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      " input_1 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
       "                                                                 \n",
       " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
       "                                                                 \n",
@@ -301,9 +301,9 @@
       "                                                                 \n",
       " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 25088)             0         \n",
+      " flatten (Flatten)           (None, 25088)             0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 2)                 50178     \n",
+      " dense (Dense)               (None, 2)                 50178     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 14764866 (56.32 MB)\n",
